basic api's implementaions

--- a/allcreators.html
+++ b/allcreators.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick.min.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick-theme.min.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-        <script type="text/javascript" src="components/header.js"></script>
+       <script type="text/javascript" src="components/headerprofile.js"></script>
         <script type="text/javascript" src="components/footer.js"></script>
         <script type="text/javascript" src="components/modals.js"></script>
         <script type="text/javascript" src="js/index.js" defer></script>
@@ -29,7 +29,7 @@
         <section class="main_wrapper">
             <div class="main_container">
                 <!-- Header Section Start  -->
-                <header-component></header-component>
+                <headerprofile-component></headerprofile-component >
 
                 <!-- creators Section Start  -->
                 <section class="creators models">
