--- a/creatoraccount.html
+++ b/creatoraccount.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css" />
        <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script>
-        <script type="text/javascript" src="components/header.js"></script>
+       <script type="text/javascript" src="components/headerprofile.js"></script>
         <script type="text/javascript" src="components/footer.js"></script>
         <script type="text/javascript" src="components/modals.js"></script>
         <script type="text/javascript" src="js/index.js" defer></script>
