--- a/showresult.html
+++ b/showresult.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v6.0.0-beta3/css/all.css" />
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick.min.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick-theme.min.css" />
-        <script type="text/javascript" src="components/header.js"></script>
+       <script type="text/javascript" src="components/headerprofile.js"></script>
         <script type="text/javascript" src="components/footer.js"></script>
         <script type="text/javascript" src="components/modals.js"></script>
         <script type="text/javascript" src="js/index.js" defer></script>
@@ -31,7 +31,7 @@
             <div class="main_container">
 
             <!-- Header Section Start  -->
-            <header-component></header-component>
+            <headerprofile-component></headerprofile-component >
 
 
             <!-- category_results Section Start  -->
