--- a/singlecategory.html
+++ b/singlecategory.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick.min.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick-theme.min.css" />
         <link rel="stylesheet" type="text/css" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css">
-        <script type="text/javascript" src="components/header.js"></script>
+       <script type="text/javascript" src="components/headerprofile.js"></script>
         <script type="text/javascript" src="components/footer.js"></script>
         <script type="text/javascript" src="components/modals.js"></script>
         <script type="text/javascript" src="js/index.js" defer></script>
@@ -32,7 +32,7 @@
             <div class="main_container">
 
             <!-- Header Section Start  -->
-            <header-component></header-component>
+            <headerprofile-component></headerprofile-component >
 
 
             <!-- category_results Section Start  -->
